
[project]
name = "pepysdiary"
requires-python = "~=3.10.0"
version = "1.0"
dependencies = [
  "beautifulsoup4",
  "bleach[css]",
  "boto3",
  "coreapi",
  "dj-database-url",
  "django-contrib-comments",
  "django-filter",
  "django-hcaptcha",
  "django-redis",
  "django-storages",
  "django-treebeard",
  "django",
  "djangorestframework",
  "gunicorn",
  "lxml",
  "Markdown",
  "Pillow",
  "psycopg[binary]",
  "python-dotenv",
  "pyyaml",
  "requests",
  "responses",
  "sentry-sdk",
  "setproctitle",
  "smartypants",
  "uritemplate",
]

[dependency-groups]
dev = [
  "coverage[toml]",
  "django-debug-toolbar",
  "factory-boy",
  "ipython",
  "pre-commit",
  "responses",
  "ruff",
  # For tracebacks when running tests in parallel:
  "tblib",
  "time-machine>=2.17.0",
  "unittest-parametrize",
]

[tool.coverage.report]
omit = ["*/migrations/*"]

[tool.coverage.run]
branch = true
include = ["pepysdiary/*"]
omit = ["*/migrations/*.py"]

[tool.ruff]
extend-exclude = ["*/migrations/*"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = []
select = [
  # Reference: https://docs.astral.sh/ruff/rules/
  "B",      # flake8-bugbear
  "E",      # pycodestyle
  "F",      # Pyflakes
  "G",      # flake8-logging-format
  "I",      # isort
  "N",      # pip8-naming
  "Q",      # flake8-quotes
  "BLE",    # flake8-blind-except
  "DJ",     # flake8-django
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "INP",    # flake8-no-pep420
  "FBT",    # flake8-boolean-trap
  "PIE",    # flake8-pie
  "RSE",    # flake-raise
  "SIM",    # flake8-simplify
  "T20",    # flake8-print
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "RUF100", # unused-noqa
  "RUF200", # invalid-pyproject-toml
]

[tool.uv.pip]
generate-hashes = true
python-version = "3.10"
